Fix overlaping divs

--- a/portfolio-frontend/src/components/navigation-bar/mobile-navigation/mobilenavigation.scss
+++ b/portfolio-frontend/src/components/navigation-bar/mobile-navigation/mobilenavigation.scss
@@ -10,7 +10,7 @@
 		top: 2.55em;
 		right: 3.7em;
 		color: white;
-		z-index: 11;
+		z-index: 13;
 		display: block;
 		.menu-icon{
 			position: fixed;
